Try to fix overflow problem

--- a/src/app.css
+++ b/src/app.css
@@ -29,6 +29,7 @@
 body {
 	min-height: 100dvh;
 	margin: 0;
+	overflow-x: hidden;
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
 	background-size: 100vw 100dvh;
